# TerminalStyle

./: CMakeLists.txt  Guide.md  README.md
demo/: CMakeLists.txt  demo_functions.cpp  demo_functions.hpp  main.cpp
lib/: CMakeLists.txt
lib/terminal_style/: Colors.hpp  Formats.hpp  TStyler.cpp  TStyler.hpp  TerStyledText.cpp  TerStyledText.hpp  TerminalStyle.cpp  TerminalStyle.hpp
main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test-cases.cpp  test-cases.hpp  test-mixing-codes.cpp  test-standard-codes-format-fgColor-bgColor.cpp  tests-entry.cpp  tests-fgColors.cpp  tests-functionality.cpp
